--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
