--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>2.9.2</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+
+		</dependency>
 
     </dependencies>
 
